# Smart_Plant

./: CMakeLists.txt  README.md  Smart_Plant Debug.launch  script.sh  toolchain.cmake
Core/Inc/: SysTickDelay.h  main.h
Core/Src/: SysTickDelay.c  main.c
Debug/: Smart_Plant.elf  Smart_Plant.list  Smart_Plant.map  makefile  objects.list
Debug/Core/Src/: I2C_lib.cyclo  I2C_lib.d  I2C_lib.su  SysTickDelay.cyclo  SysTickDelay.d  SysTickDelay.su  main.cyclo  main.d  main.su  subdir.mk
Inc/: I2C_lib.h  main.h
Source/: I2C_lib.c  main.c  syscalls.c
Startup/: startup_stm32f446retx.s
